my portfolio app

--- a/apps/templates/index.html
+++ b/apps/templates/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>vCard - Personal Portfolio</title>
+  <title>Habtamu's Portfolio</title>
 
   <!-- Favicon -->
-  <link rel="shortcut icon" href="{% static 'images/logo.ico' %}">
+  <link rel="shortcut icon" href="{% static 'images/my-avatar.png' %}">
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
@@ -39,12 +39,12 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="{% static 'images/my-avatar.png' %}" alt="Richard hanrick" width="80">
+          <img src="{% static 'images/my-avatar.png' %}" alt="Habtamu Girum" width="80">
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Richard hanrick">Richard hanrick</h1>
-          <p class="title">Web developer</p>
+          <h1 class="name" title="Habtamu Girum">Habtamu Girum</h1>
+          <p class="title">Developer</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -64,7 +64,7 @@
             </div>
             <div class="contact-info">
               <p class="contact-title">Email</p>
-              <a href="mailto:richard@example.com" class="contact-link">richard@example.com</a>
+              <a href="mailto:habtamugirum478@gmail.com" class="contact-link">habtamugirum478@gmail.com</a>
             </div>
           </li>
 
@@ -74,7 +74,7 @@
             </div>
             <div class="contact-info">
               <p class="contact-title">Phone</p>
-              <a href="tel:+12133522795" class="contact-link">+1 (213) 352-2795</a>
+              <a href="tel:+251948730766" class="contact-link">+251-948-73-07-66</a>
             </div>
           </li>
 
@@ -84,7 +84,7 @@
             </div>
             <div class="contact-info">
               <p class="contact-title">Birthday</p>
-              <time datetime="1982-06-23">June 23, 1982</time>
+              <time datetime="1999-03-14">March 14, 1999</time>
             </div>
           </li>
 
@@ -94,7 +94,7 @@
             </div>
             <div class="contact-info">
               <p class="contact-title">Location</p>
-              <address>Sacramento, California, USA</address>
+              <address>Ethiopia, Addis Ababa</address>
             </div>
           </li>
         </ul>
@@ -123,10 +123,6 @@
 
     </aside>
 
-    <!--
-      - #main-content
-    -->
-
     <div class="main-content">
 
       <!--
@@ -152,10 +148,19 @@
       </li>
     </ul>
   </nav>
+
+  <script src="{% static 'js/new.js' %}"></script>
+
         {% block content %}
         <!-- Default content if block is not overridden -->
         {% endblock %}
     </main>
+
+  <!--
+    - ionicon link
+  -->
+  <!-- <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script> -->
+  <!-- <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script> -->
 </body>
 
 </html> 
