--- a/apps/templates/blog.html
+++ b/apps/templates/blog.html
@@ -2,36 +2,187 @@
 {% load static %}
 
 {% block content %}
-  <article class="about active" data-page="about">
-    <header>
-      <h2 class="h2 article-title">About me</h2>
-    </header>
-    <section class="about-text">
-      <p>
-        I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
-        I enjoy turning complex problems into simple, beautiful, and intuitive designs.
-      </p>
-      <p>
-        My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-        Moreover, I add a personal touch to your product and make sure it is eye-catching and easy to use. My aim is to bring
-        across your message and identity in the most creative way. I have created web designs for many famous brand companies.
-      </p>
-    </section>
+<article class="blog active" data-page="blog">
 
-    <!-- Service Section -->
-    <section class="service">
-      <h3 class="h3 service-title">What I'm doing</h3>
-      <ul class="service-list">
-        <!-- Content for services -->
-      </ul>
-    </section>
+  <header>
+    <h2 class="h2 article-title">Blog</h2>
+  </header>
 
-    <!-- Testimonials Section -->
-    <section class="testimonials">
-      <h3 class="h3 testimonials-title">Testimonials</h3>
-      <ul class="testimonials-list has-scrollbar">
-        <!-- Content for testimonials -->
-      </ul>
-    </section>
-  </article>
+  <section class="blog-posts">
+
+    <ul class="blog-posts-list">
+
+      <li class="blog-post-item">
+        <a href="#">
+
+          <figure class="blog-banner-box">
+            <img src="{% static 'images/blog-1.jpg' %}" alt="Design conferences in 2022" loading="lazy">
+          </figure>
+
+          <div class="blog-content">
+
+            <div class="blog-meta">
+              <p class="blog-category">Design</p>
+
+              <span class="dot"></span>
+
+              <time datetime="2022-02-23">Fab 23, 2022</time>
+            </div>
+
+            <h3 class="h3 blog-item-title">Design conferences in 2022</h3>
+
+            <p class="blog-text">
+              Veritatis et quasi architecto beatae vitae dicta sunt, explicabo.
+            </p>
+
+          </div>
+
+        </a>
+      </li>
+
+      <li class="blog-post-item">
+        <a href="#">
+
+          <figure class="blog-banner-box">
+            <img src="{% static 'images/blog-2.jpg' %}" alt="Best fonts every designer" loading="lazy">
+          </figure>
+
+          <div class="blog-content">
+
+            <div class="blog-meta">
+              <p class="blog-category">Design</p>
+
+              <span class="dot"></span>
+
+              <time datetime="2022-02-23">Fab 23, 2022</time>
+            </div>
+
+            <h3 class="h3 blog-item-title">Best fonts every designer</h3>
+
+            <p class="blog-text">
+              Sed ut perspiciatis, nam libero tempore, cum soluta nobis est eligendi.
+            </p>
+
+          </div>
+
+        </a>
+      </li>
+
+      <li class="blog-post-item">
+        <a href="#">
+
+          <figure class="blog-banner-box">
+            <img src="{% static 'images/blog-3.jpg' %}" alt="Design digest #80" loading="lazy">
+          </figure>
+
+          <div class="blog-content">
+
+            <div class="blog-meta">
+              <p class="blog-category">Design</p>
+
+              <span class="dot"></span>
+
+              <time datetime="2022-02-23">Fab 23, 2022</time>
+            </div>
+
+            <h3 class="h3 blog-item-title">Design digest #80</h3>
+
+            <p class="blog-text">
+              Excepteur sint occaecat cupidatat no proident, quis nostrum exercitationem ullam corporis suscipit.
+            </p>
+
+          </div>
+
+        </a>
+      </li>
+
+      <li class="blog-post-item">
+        <a href="#">
+
+          <figure class="blog-banner-box">
+            <img src="{% static 'images/blog-4.jpg' %}" alt="UI interactions of the week" loading="lazy">
+          </figure>
+
+          <div class="blog-content">
+
+            <div class="blog-meta">
+              <p class="blog-category">Design</p>
+
+              <span class="dot"></span>
+
+              <time datetime="2022-02-23">Fab 23, 2022</time>
+            </div>
+
+            <h3 class="h3 blog-item-title">UI interactions of the week</h3>
+
+            <p class="blog-text">
+              Enim ad minim veniam, consectetur adipiscing elit, quis nostrud exercitation ullamco laboris nisi.
+            </p>
+
+          </div>
+
+        </a>
+      </li>
+
+      <li class="blog-post-item">
+        <a href="#">
+
+          <figure class="blog-banner-box">
+            <img src="{% static 'images/blog-5.jpg' %}" alt="The forgotten art of spacing" loading="lazy">
+          </figure>
+
+          <div class="blog-content">
+
+            <div class="blog-meta">
+              <p class="blog-category">Design</p>
+
+              <span class="dot"></span>
+
+              <time datetime="2022-02-23">Fab 23, 2022</time>
+            </div>
+
+            <h3 class="h3 blog-item-title">The forgotten art of spacing</h3>
+
+            <p class="blog-text">
+              Maxime placeat, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+
+          </div>
+
+        </a>
+      </li>
+
+      <li class="blog-post-item">
+        <a href="#">
+
+          <figure class="blog-banner-box">
+            <img src="{% static 'images/blog-6.jpg' %}" alt="Design digest #79" loading="lazy">
+          </figure>
+
+          <div class="blog-content">
+
+            <div class="blog-meta">
+              <p class="blog-category">Design</p>
+
+              <span class="dot"></span>
+
+              <time datetime="2022-02-23">Fab 23, 2022</time>
+            </div>
+
+            <h3 class="h3 blog-item-title">Design digest #79</h3>
+
+            <p class="blog-text">
+              Optio cumque nihil impedit uo minus quod maxime placeat, velit esse cillum.
+            </p>
+
+          </div>
+
+        </a>
+      </li>
+
+    </ul>
+
+  </section>
+
+</article>
 {% endblock %}
