--- a/apps/templates/contact.html
+++ b/apps/templates/contact.html
@@ -2,36 +2,42 @@
 {% load static %}
 
 {% block content %}
-  <article class="about active" data-page="about">
-    <header>
-      <h2 class="h2 article-title">About me</h2>
-    </header>
-    <section class="about-text">
-      <p>
-        I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
-        I enjoy turning complex problems into simple, beautiful, and intuitive designs.
-      </p>
-      <p>
-        My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-        Moreover, I add a personal touch to your product and make sure it is eye-catching and easy to use. My aim is to bring
-        across your message and identity in the most creative way. I have created web designs for many famous brand companies.
-      </p>
-    </section>
+<article class="contact active" data-page="contact">
 
-    <!-- Service Section -->
-    <section class="service">
-      <h3 class="h3 service-title">What I'm doing</h3>
-      <ul class="service-list">
-        <!-- Content for services -->
-      </ul>
-    </section>
+  <header>
+    <h2 class="h2 article-title">Contact</h2>
+  </header>
 
-    <!-- Testimonials Section -->
-    <section class="testimonials">
-      <h3 class="h3 testimonials-title">Testimonials</h3>
-      <ul class="testimonials-list has-scrollbar">
-        <!-- Content for testimonials -->
-      </ul>
-    </section>
-  </article>
+  <section class="mapbox" data-mapbox>
+    <figure>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d199666.5651251294!2d-121.58334177520186!3d38.56165006739519!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809ac672b28397f9%3A0x921f6aaa74197fdb!2sSacramento%2C%20CA%2C%20USA!5e0!3m2!1sen!2sbd!4v1647608789441!5m2!1sen!2sbd"
+        width="400" height="300" loading="lazy"></iframe>
+    </figure>
+  </section>
+
+  <section class="contact-form">
+
+    <h3 class="h3 form-title">Contact Form</h3>
+
+    <form action="#" class="form" data-form>
+
+      <div class="input-wrapper">
+        <input type="text" name="fullname" class="form-input" placeholder="Full name" required data-form-input>
+
+        <input type="email" name="email" class="form-input" placeholder="Email address" required data-form-input>
+      </div>
+
+      <textarea name="message" class="form-input" placeholder="Your Message" required data-form-input></textarea>
+
+      <button class="form-btn" type="submit" disabled data-form-btn>
+        <ion-icon name="paper-plane"></ion-icon>
+        <span>Send Message</span>
+      </button>
+
+    </form>
+
+  </section>
+
+</article>
 {% endblock %}
