--- a/apps/templates/portfolio.html
+++ b/apps/templates/portfolio.html
@@ -2,36 +2,235 @@
 {% load static %}
 
 {% block content %}
-  <article class="about active" data-page="about">
-    <header>
-      <h2 class="h2 article-title">About me</h2>
-    </header>
-    <section class="about-text">
-      <p>
-        I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
-        I enjoy turning complex problems into simple, beautiful, and intuitive designs.
-      </p>
-      <p>
-        My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-        Moreover, I add a personal touch to your product and make sure it is eye-catching and easy to use. My aim is to bring
-        across your message and identity in the most creative way. I have created web designs for many famous brand companies.
-      </p>
-    </section>
+<article class="portfolio active" data-page="portfolio">
 
-    <!-- Service Section -->
-    <section class="service">
-      <h3 class="h3 service-title">What I'm doing</h3>
-      <ul class="service-list">
-        <!-- Content for services -->
-      </ul>
-    </section>
+  <header>
+    <h2 class="h2 article-title">Portfolio</h2>
+  </header>
 
-    <!-- Testimonials Section -->
-    <section class="testimonials">
-      <h3 class="h3 testimonials-title">Testimonials</h3>
-      <ul class="testimonials-list has-scrollbar">
-        <!-- Content for testimonials -->
+  <section class="projects">
+
+    <ul class="filter-list">
+
+      <li class="filter-item">
+        <button class="active" data-filter-btn>All</button>
+      </li>
+
+      <li class="filter-item">
+        <button data-filter-btn>Web design</button>
+      </li>
+
+      <li class="filter-item">
+        <button data-filter-btn>Applications</button>
+      </li>
+
+      <li class="filter-item">
+        <button data-filter-btn>Web development</button>
+      </li>
+
+    </ul>
+
+    <div class="filter-select-box">
+
+      <button class="filter-select" data-select>
+
+        <div class="select-value" data-selecct-value>Select category</div>
+
+        <div class="select-icon">
+          <ion-icon name="chevron-down"></ion-icon>
+        </div>
+
+      </button>
+
+      <ul class="select-list">
+
+        <li class="select-item">
+          <button data-select-item>All</button>
+        </li>
+
+        <li class="select-item">
+          <button data-select-item>Web design</button>
+        </li>
+
+        <li class="select-item">
+          <button data-select-item>Applications</button>
+        </li>
+
+        <li class="select-item">
+          <button data-select-item>Web development</button>
+        </li>
+
       </ul>
-    </section>
-  </article>
-{% endblock %}
+
+    </div>
+
+    <ul class="project-list">
+
+      <li class="project-item  active" data-filter-item data-category="web development">
+        <a href="#">
+
+          <figure class="project-img">
+            <div class="project-item-icon-box">
+              <ion-icon name="eye-outline"></ion-icon>
+            </div>
+
+            <img src="{% static 'images/project-1.jpg' %}" alt="finance" loading="lazy">
+          </figure>
+
+          <h3 class="project-title">Finance</h3>
+
+          <p class="project-category">Web development</p>
+
+        </a>
+      </li>
+
+      <li class="project-item  active" data-filter-item data-category="web development">
+        <a href="#">
+
+          <figure class="project-img">
+            <div class="project-item-icon-box">
+              <ion-icon name="eye-outline"></ion-icon>
+            </div>
+
+            <img src="{% static 'images/project-2.png' %}" alt="orizon" loading="lazy">
+          </figure>
+
+          <h3 class="project-title">Orizon</h3>
+
+          <p class="project-category">Web development</p>
+
+        </a>
+      </li>
+
+      <li class="project-item  active" data-filter-item data-category="web design">
+        <a href="#">
+
+          <figure class="project-img">
+            <div class="project-item-icon-box">
+              <ion-icon name="eye-outline"></ion-icon>
+            </div>
+
+            <img src="{% static 'images/project-3.jpg' %}" alt="fundo" loading="lazy">
+          </figure>
+
+          <h3 class="project-title">Fundo</h3>
+
+          <p class="project-category">Web design</p>
+
+        </a>
+      </li>
+
+      <li class="project-item  active" data-filter-item data-category="applications">
+        <a href="#">
+
+          <figure class="project-img">
+            <div class="project-item-icon-box">
+              <ion-icon name="eye-outline"></ion-icon>
+            </div>
+
+            <img src="{% static 'images/project-4.png' %}" alt="brawlhalla" loading="lazy">
+          </figure>
+
+          <h3 class="project-title">Brawlhalla</h3>
+
+          <p class="project-category">Applications</p>
+
+        </a>
+      </li>
+
+      <li class="project-item  active" data-filter-item data-category="web design">
+        <a href="#">
+
+          <figure class="project-img">
+            <div class="project-item-icon-box">
+              <ion-icon name="eye-outline"></ion-icon>
+            </div>
+
+            <img src="{% static 'images/project-5.png' %}" alt="dsm." loading="lazy">
+          </figure>
+
+          <h3 class="project-title">DSM.</h3>
+
+          <p class="project-category">Web design</p>
+
+        </a>
+      </li>
+
+      <li class="project-item  active" data-filter-item data-category="web design">
+        <a href="#">
+
+          <figure class="project-img">
+            <div class="project-item-icon-box">
+              <ion-icon name="eye-outline"></ion-icon>
+            </div>
+
+            <img src="{% static 'images/project-6.png' %}" alt="metaspark" loading="lazy">
+          </figure>
+
+          <h3 class="project-title">MetaSpark</h3>
+
+          <p class="project-category">Web design</p>
+
+        </a>
+      </li>
+
+      <li class="project-item  active" data-filter-item data-category="web development">
+        <a href="#">
+
+          <figure class="project-img">
+            <div class="project-item-icon-box">
+              <ion-icon name="eye-outline"></ion-icon>
+            </div>
+
+            <img src="{% static 'images/project-7.png' %}" alt="summary" loading="lazy">
+          </figure>
+
+          <h3 class="project-title">Summary</h3>
+
+          <p class="project-category">Web development</p>
+
+        </a>
+      </li>
+
+      <li class="project-item  active" data-filter-item data-category="applications">
+        <a href="#">
+
+          <figure class="project-img">
+            <div class="project-item-icon-box">
+              <ion-icon name="eye-outline"></ion-icon>
+            </div>
+
+            <img src="{% static 'images/project-8.jpg' %}" alt="task manager" loading="lazy">
+          </figure>
+
+          <h3 class="project-title">Task Manager</h3>
+
+          <p class="project-category">Applications</p>
+
+        </a>
+      </li>
+
+      <li class="project-item  active" data-filter-item data-category="web development">
+        <a href="#">
+
+          <figure class="project-img">
+            <div class="project-item-icon-box">
+              <ion-icon name="eye-outline"></ion-icon>
+            </div>
+
+            <img src="{% static 'images/project-9.png' %}" alt="arrival" loading="lazy">
+          </figure>
+
+          <h3 class="project-title">Arrival</h3>
+
+          <p class="project-category">Web development</p>
+
+        </a>
+      </li>
+
+    </ul>
+
+  </section>
+
+</article>
+{%endblock%}
