--- a/apps/templates/resume.html
+++ b/apps/templates/resume.html
@@ -22,9 +22,9 @@
 
       <li class="timeline-item">
 
-        <h4 class="h4 timeline-item-title">University school of the arts</h4>
+        <h4 class="h4 timeline-item-title">Addis Ababa Science and Technology University</h4>
 
-        <span>2007 — 2008</span>
+        <span>2018 — 2023</span>
 
         <p class="timeline-text">
           Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
@@ -36,7 +36,7 @@
 
       <li class="timeline-item">
 
-        <h4 class="h4 timeline-item-title">New york academy of art</h4>
+        <h4 class="h4 timeline-item-title">Addis Ababa Science and Technology University</h4>
 
         <span>2006 — 2007</span>
 
