write resume and index

--- a/apps/templates/about.html
+++ b/apps/templates/about.html
@@ -8,14 +8,15 @@
     </header>
     <section class="about-text">
       <p>
-        I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
-        I enjoy turning complex problems into simple, beautiful, and intuitive designs.
+       I am a computer engineer with over one year of experience in developing web applications, 
+       ranging from small businesses to large enterprises. I have expertise in Core Python, 
+       Java (Basic), Django, Next.js, PostgreSQL databases, and API integrations, including OAuth 2.0, among others.
       </p>
-      <p>
+      <!-- <p>
         My job is to build your website so that it is functional and user-friendly but at the same time attractive.
         Moreover, I add a personal touch to your product and make sure it is eye-catching and easy to use. My aim is to bring
         across your message and identity in the most creative way. I have created web designs for many famous brand companies.
-      </p>
+      </p> -->
     </section>
 
     <!-- Testimonials Section -->
