--- a/apps/templates/resume.html
+++ b/apps/templates/resume.html
@@ -19,35 +19,43 @@
     </div>
 
     <ol class="timeline-list">
+      <li class="timeline-item">
+
+<h4 class="h4 timeline-item-title">
+  Master’s degree from Addis Ababa Science and Technology University 
+  <img src="{% static 'images/aastu.jpeg' %}" alt="orizon" loading="lazy" style="display: inline; width: 50px; height: auto;">
+</h4>
+
+        <span>2022 — 2024</span>
+
+        <p class="timeline-text">
+          I earned my Master’s degree in Computer Engineering from Addis Ababa
+            Science and Technology University with a CGPA of 3.78 and an excellent
+            thesis result. My research focused on the area of cybersecurity using
+            machine learning and deep learning techniques. you can see my document on this <a href="https://drive.google.com/file/d/1vklkvCj1T-R-cf9psnhvYBrGe67izPqA/view?usp=drive_link" style="display: inline; color:#a88732;">MSc Document</a>
+        </p>
+
+      </li>
 
       <li class="timeline-item">
 
-        <h4 class="h4 timeline-item-title">Addis Ababa Science and Technology University</h4>
+        <h4 class="h4 timeline-item-title">BSc Addis Ababa Science and Technology University <img src="{% static 'images/aastu.jpeg' %}" alt="orizon" loading="lazy" style="display: inline; width: 50px; height: auto;"></h4>
 
         <span>2018 — 2023</span>
 
         <p class="timeline-text">
-          Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-          quas molestias
-          exceptur.
+          I completed my Bachelor’s degree in Electrical and Computer Engineering, specializing in Computer Engineering, with a CGPA of 3.65 from Addis
+          Ababa Science and Technology University. I received an A+ for my final
+          year project, which focused on a web-based Document Tracking System
+          (DTS). We developed the project using the MERN stack. For more details,
+          you can refer on this <a href="https://github.com/HabibiGirum/Document-tracking-system-project.git" style="display: inline; color:#a88732;">DTS</a>
         </p>
 
       </li>
 
-      <li class="timeline-item">
+      
 
-        <h4 class="h4 timeline-item-title">Addis Ababa Science and Technology University</h4>
-
-        <span>2006 — 2007</span>
-
-        <p class="timeline-text">
-          Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est
-          omnis..
-        </p>
-
-      </li>
-
-      <li class="timeline-item">
+      <!-- <li class="timeline-item">
 
         <h4 class="h4 timeline-item-title">High school of art and design</h4>
 
@@ -59,7 +67,7 @@
           eos.
         </p>
 
-      </li>
+      </li> -->
 
     </ol>
 
@@ -79,19 +87,19 @@
 
       <li class="timeline-item">
 
-        <h4 class="h4 timeline-item-title">Creative director</h4>
+        <h4 class="h4 timeline-item-title">Vistar Cloud</h4>
 
-        <span>2015 — Present</span>
+        <span>2023 — 2024</span>
 
         <p class="timeline-text">
-          Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas
-          molestias
-          exceptur.
+          I have been working at this company since 2023–2024 as a Backend Developer, primarily focusing on Django REST Framework (DRF). Throughout
+my time here, I have gained valuable experience in various areas, including API integrations (like OAuth2.0), Webflow, Mobile Device Management
+(MDM), and developing desktop applications for Windows, Linux, macOS.
         </p>
 
       </li>
 
-      <li class="timeline-item">
+      <!-- <li class="timeline-item">
 
         <h4 class="h4 timeline-item-title">Art director</h4>
 
@@ -117,7 +125,7 @@
           exceptur.
         </p>
 
-      </li>
+      </li> -->
 
     </ol>
 
@@ -132,52 +140,52 @@
       <li class="skills-item">
 
         <div class="title-wrapper">
-          <h5 class="h5">Web design</h5>
-          <data value="80">80%</data>
+          <h5 class="h5" style="color:#a88732">Python</h5>
+          <!-- <data value="80">80%</data> -->
         </div>
 
-        <div class="skill-progress-bg">
+        <!-- <div class="skill-progress-bg">
           <div class="skill-progress-fill" style="width: 80%;"></div>
-        </div>
+        </div> -->
 
       </li>
 
       <li class="skills-item">
 
         <div class="title-wrapper">
-          <h5 class="h5">Graphic design</h5>
-          <data value="70">70%</data>
+          <h5 class="h5" style="color:#a88732">Java</h5>
+          <!-- <data value="70">70%</data> -->
         </div>
 
-        <div class="skill-progress-bg">
+        <!-- <div class="skill-progress-bg">
           <div class="skill-progress-fill" style="width: 70%;"></div>
-        </div>
+        </div> -->
 
       </li>
 
       <li class="skills-item">
 
         <div class="title-wrapper">
-          <h5 class="h5">Branding</h5>
-          <data value="90">90%</data>
+          <h5 class="h5" style="color:#a88732">Django(DRF)</h5>
+          <!-- <data value="90">90%</data> -->
         </div>
 
-        <div class="skill-progress-bg">
+        <!-- <div class="skill-progress-bg">
           <div class="skill-progress-fill" style="width: 90%;"></div>
-        </div>
+        </div> -->
 
       </li>
 
       <li class="skills-item">
 
         <div class="title-wrapper">
-          <h5 class="h5">WordPress</h5>
-          <data value="50">50%</data>
+          <h5 class="h5" style="color:#a88732">Docker</h5>
+          <!-- <data value="50">50%</data> -->
         </div>
 
-        <div class="skill-progress-bg">
+        <!-- <div class="skill-progress-bg">
           <div class="skill-progress-fill" style="width: 50%;"></div>
-        </div>
+        </div> -->
 
       </li>
 
